--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
     <ItemGroup>
         <Content Remove="**" />
+        <Content Include="ClientApp\staticwebapp.config.json" />
     </ItemGroup>
     <ItemGroup>
       <Folder Include="ClientApp\src\app\core\components\" />
